--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form
         class="datatable__row datatable__row--add"
         method="POST"
-        action="https://still-harbor-11119.herokuapp.com/v1/task/createTask"
+        action="https://still-harbor-11119.herokuapp.com/v1/tasks/createTask"
         data-task-add-form
     >
       <fieldset class="datatable__row-section datatable__row-section--input-section">
